--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.19.2",
     "nest-winston": "^1.9.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
