feat: add comment

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 APP_PORT=3000
 NODE_ENVIRONMENT=development
 
+// TODO: ADD SECRET KEY
+
 #Postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
