--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=nest-template
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+JWT_SECRET=secret
+EXP_TIME=15m
